tests/core/snapshots/graphql-conformance-015.md_6.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "id": 4,
        "name": "User 4",
        "featuredVideo": "video_4_1920_1080_true"
      }
    }
  }
}
