tests/core/snapshots/graphql-conformance-015.md_7.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "id": 4,
        "name": "User 4",
        "searchComments": "video_4_[[\"today\"]]"
      }
    }
  }
}
