tests/core/snapshots/graphql-conformance-015.md_9.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Build error: ResolveInputError: Argument `height` for field `featuredVideoPreview.video` is required",
        "locations": [
          {
            "line": 0,
            "column": 0
          }
        ]
      }
    ]
  }
}
