tests/core/snapshots/graphql-conformance-019.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "queryNodeA": {
        "name": "nodeA",
        "nodeB": {
          "name": "nodeB"
        },
        "nodeC": {
          "name": "nodeC"
        },
        "child": {
          "name": "nodeA"
        }
      }
    }
  }
}
