tests/core/snapshots/graphql-conformance-019.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "queryNodeC": [
        {
          "__typename": "NodeA",
          "nodeA_id": "nodeA_id"
        },
        {
          "name": "nodeB",
          "nodeB_id": "nodeB_id"
        }
      ]
    }
  }
}
